# ginnungagap

./: CMakeLists.txt  README  TODO  index.html
cmake_modules/: FindUuid.cmake  FindXDR.cmake
lib/: CMakeLists.txt
lib/ginnungagap/: AUTHORS  ControlMessagesOverview
lib/ginnungagap/src/: .gitignore  BufferStructures.h  CMakeLists.txt  CommunicationSocket.cpp  CommunicationSocket.h  CommunicationSocketManager.cpp  CommunicationSocketManager.h  Ginnungagap.cpp  Ginnungagap.h  ListenSocket.cpp  ListenSocket.h  MessageHandler.cpp  MessageHandler.h  MessageType.h  MigrationGroup.cpp  MigrationGroup.h  MigrationService.cpp  MigrationService.h  NameService.cpp  NameService.h  NameServiceRecord.cpp  NameServiceRecord.h  NetAddr.cpp  NetAddr.h  NetworkGraph.cpp  NetworkGraph.h  Object.cpp  Object.h  ObjectFactory.h  Proxy.cpp  Proxy.h  ProxyFactory.h  Skeleton.h  Socket.cpp  Socket.h  Uuid.cpp  Uuid.h  XdrBuffer.cpp  XdrBuffer.h  XdrReceiveBuffer.cpp  (+6 more)
niflheim/: README
niflheim/src/: Avatar.cpp  Avatar.h  AvatarsView.h  CMakeLists.txt  Client.cpp  ClientGolddigger.cpp  ClientMeasureLat.cpp  Direction.h  Goldmine.cpp  Goldmine.h  ManualClient.cpp  Proxy.cpp  Server.cpp  TestLMI.cpp  TestMigGrpServer.cpp  TestMigProxy.cpp  TestMigRmiOverheadClient.cpp  TestMigRmiOverheadProxy.cpp  TestMigRmiOverheadServer.cpp  TestMigServer.cpp  TestObject.h  TestRmiClient.cpp  TestRmiLocalClient.cpp  TestRmiServer.cpp  Version.h  View.cpp  View.h  World.cpp  World.h  WorldObjects.h  template
niflheim/src/ggg/: AvatarMigration.cpp  AvatarProxy.cpp  AvatarProxy.h  CMakeLists.txt  GoldmineMigration.cpp  GoldmineProxy.cpp  GoldmineProxy.h  ObjectFactory.cpp  ObjectName.h  ProxyFactory.cpp  Skeleton.cpp  TestObjectMigration.cpp  TestObjectProxy.cpp  ViewProxy.cpp  ViewProxy.h  WorldMigration.cpp  WorldProxy.cpp  WorldProxy.h
niflheim/src/ginnungagap/: AvatarMigration.cpp  AvatarProxy.cpp  AvatarProxy.h  GoldmineMigration.cpp  GoldmineProxy.cpp  GoldmineProxy.h  ObjectFactory.cpp  ObjectName.h  ProxyFactory.cpp  Skeleton.cpp  TestObjectMigration.cpp  TestObjectProxy.cpp  TestObjectProxy.h  ViewProxy.cpp  ViewProxy.h  WorldMigration.cpp  WorldProxy.cpp  WorldProxy.h
niflheim/src/test/: TestMigGrpServer.cpp  TestMigProxy.cpp  TestMigRmiOverheadProxy.cpp  TestMigRmiOverheadServer.cpp  TestMigServer.cpp  TestObject.cpp  TestObjectProxy.h  TestRmiServer.cpp
